--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "projen": "npx projen",
     "start": "npx projen start",
+    "clobber": "npx projen clobber",
     "compile": "npx projen compile",
     "test": "npx projen test",
     "build": "npx projen build",
@@ -46,7 +47,7 @@
     "jsii-pacmak": "^1.16.0",
     "jsii-release": "^0.2.8",
     "json-schema": "^0.2.5",
-    "projen": "^0.6.17",
+    "projen": "^0.6.22",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.4.4",
     "typescript": "^3.9.5"
@@ -56,6 +57,7 @@
     "@aws-cdk/aws-efs": "^1.77.0",
     "@aws-cdk/aws-iam": "^1.77.0",
     "@aws-cdk/aws-lambda": "^1.77.0",
+    "@aws-cdk/aws-s3": "^1.77.0",
     "@aws-cdk/aws-secretsmanager": "^1.77.0",
     "@aws-cdk/core": "^1.77.0",
     "@aws-cdk/custom-resources": "^1.77.0",
@@ -66,6 +68,7 @@
     "@aws-cdk/aws-efs": "^1.77.0",
     "@aws-cdk/aws-iam": "^1.77.0",
     "@aws-cdk/aws-lambda": "^1.77.0",
+    "@aws-cdk/aws-s3": "^1.77.0",
     "@aws-cdk/aws-secretsmanager": "^1.77.0",
     "@aws-cdk/core": "^1.77.0",
     "@aws-cdk/custom-resources": "^1.77.0"
