--- a/package.json
+++ b/package.json
@@ -31,48 +31,54 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "^1.83.0",
-    "@types/jest": "^26.0.19",
+    "@types/jest": "^26.0.20",
     "@types/node": "^10.17.0",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
-    "eslint": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "eslint": "^7.21.0",
     "eslint-import-resolver-node": "^0.3.4",
-    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
     "jest-junit": "^12",
-    "jsii": "^1.16.0",
-    "jsii-diff": "^1.16.0",
-    "jsii-docgen": "^1.5.4",
-    "jsii-pacmak": "^1.16.0",
-    "json-schema": "^0.2.5",
+    "jsii": "^1.23.0",
+    "jsii-diff": "^1.23.0",
+    "jsii-docgen": "^1.8.61",
+    "jsii-pacmak": "^1.23.0",
+    "json-schema": "^0.3.0",
     "projen": "^0.16.31",
     "standard-version": "^9",
-    "ts-jest": "^26.4.4",
-    "typescript": "^3.9.5"
+    "ts-jest": "^26.5.2",
+    "typescript": "^4.2.2"
   },
   "peerDependencies": {
     "@aws-cdk/aws-ec2": "^1.83.0",
+    "@aws-cdk/aws-ecs": "^1.83.0",
     "@aws-cdk/aws-efs": "^1.83.0",
     "@aws-cdk/aws-events-targets": "^1.83.0",
     "@aws-cdk/aws-iam": "^1.83.0",
     "@aws-cdk/aws-lambda": "^1.83.0",
+    "@aws-cdk/aws-logs": "^1.83.0",
     "@aws-cdk/aws-s3": "^1.83.0",
     "@aws-cdk/aws-secretsmanager": "^1.83.0",
     "@aws-cdk/core": "^1.83.0",
     "@aws-cdk/custom-resources": "^1.83.0",
+    "cdk-fargate-run-task": "^0.0.65",
     "constructs": "^3.2.27"
   },
   "dependencies": {
     "@aws-cdk/aws-ec2": "^1.83.0",
+    "@aws-cdk/aws-ecs": "^1.83.0",
     "@aws-cdk/aws-efs": "^1.83.0",
     "@aws-cdk/aws-events-targets": "^1.83.0",
     "@aws-cdk/aws-iam": "^1.83.0",
     "@aws-cdk/aws-lambda": "^1.83.0",
+    "@aws-cdk/aws-logs": "^1.83.0",
     "@aws-cdk/aws-s3": "^1.83.0",
     "@aws-cdk/aws-secretsmanager": "^1.83.0",
     "@aws-cdk/core": "^1.83.0",
-    "@aws-cdk/custom-resources": "^1.83.0"
+    "@aws-cdk/custom-resources": "^1.83.0",
+    "cdk-fargate-run-task": "^0.0.65"
   },
   "bundledDependencies": [],
   "keywords": [
