--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
   },
   "scripts": {
     "clobber": "npx projen clobber",
-    "bump": "npx projen bump",
-    "unbump": "npx projen unbump",
     "compile": "npx projen compile",
     "test:compile": "npx projen test:compile",
     "test": "npx projen test",
     "build": "npx projen build",
     "test:watch": "npx projen test:watch",
     "test:update": "npx projen test:update",
-    "projen:upgrade": "npx projen projen:upgrade",
+    "bump": "npx projen bump",
+    "unbump": "npx projen unbump",
+    "upgrade-dependencies": "npx projen upgrade-dependencies",
+    "upgrade-projen": "npx projen upgrade-projen",
     "default": "npx projen default",
     "watch": "npx projen watch",
     "package": "npx projen package",
@@ -31,57 +32,58 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.83.0",
-    "@types/jest": "^26.0.20",
+    "@aws-cdk/assert": "^1.101.0",
+    "@types/jest": "^26.0.23",
     "@types/node": "^10.17.0",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "eslint": "^7.21.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "eslint": "^7.28.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "jest": "^26.6.3",
     "jest-junit": "^12",
-    "jsii": "^1.24.0",
-    "jsii-diff": "^1.24.0",
-    "jsii-docgen": "^1.8.65",
-    "jsii-pacmak": "^1.24.0",
+    "jsii": "^1.30.0",
+    "jsii-diff": "^1.30.0",
+    "jsii-docgen": "^1.8.89",
+    "jsii-pacmak": "^1.30.0",
     "json-schema": "^0.3.0",
-    "projen": "^0.17.73",
+    "npm-check-updates": "^11",
+    "projen": "^0.22.8",
     "standard-version": "^9",
-    "ts-jest": "^26.5.3",
-    "typescript": "^4.2.3"
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.3.2"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-ec2": "^1.83.0",
-    "@aws-cdk/aws-ecs": "^1.83.0",
-    "@aws-cdk/aws-ecs-patterns": "^1.83.0",
-    "@aws-cdk/aws-efs": "^1.83.0",
-    "@aws-cdk/aws-events-targets": "^1.83.0",
-    "@aws-cdk/aws-iam": "^1.83.0",
-    "@aws-cdk/aws-lambda": "^1.83.0",
-    "@aws-cdk/aws-logs": "^1.83.0",
-    "@aws-cdk/aws-s3": "^1.83.0",
-    "@aws-cdk/aws-secretsmanager": "^1.83.0",
-    "@aws-cdk/core": "^1.83.0",
-    "@aws-cdk/custom-resources": "^1.83.0",
-    "cdk-fargate-run-task": "^0.0.68",
+    "@aws-cdk/aws-ec2": "^1.101.0",
+    "@aws-cdk/aws-ecs": "^1.101.0",
+    "@aws-cdk/aws-ecs-patterns": "^1.101.0",
+    "@aws-cdk/aws-efs": "^1.101.0",
+    "@aws-cdk/aws-events-targets": "^1.101.0",
+    "@aws-cdk/aws-iam": "^1.101.0",
+    "@aws-cdk/aws-lambda": "^1.101.0",
+    "@aws-cdk/aws-logs": "^1.101.0",
+    "@aws-cdk/aws-s3": "^1.101.0",
+    "@aws-cdk/aws-secretsmanager": "^1.101.0",
+    "@aws-cdk/core": "^1.101.0",
+    "@aws-cdk/custom-resources": "^1.101.0",
+    "cdk-fargate-run-task": "^0.1.30",
     "constructs": "^3.2.27"
   },
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^1.83.0",
-    "@aws-cdk/aws-ecs": "^1.83.0",
-    "@aws-cdk/aws-ecs-patterns": "^1.83.0",
-    "@aws-cdk/aws-efs": "^1.83.0",
-    "@aws-cdk/aws-events-targets": "^1.83.0",
-    "@aws-cdk/aws-iam": "^1.83.0",
-    "@aws-cdk/aws-lambda": "^1.83.0",
-    "@aws-cdk/aws-logs": "^1.83.0",
-    "@aws-cdk/aws-s3": "^1.83.0",
-    "@aws-cdk/aws-secretsmanager": "^1.83.0",
-    "@aws-cdk/core": "^1.83.0",
-    "@aws-cdk/custom-resources": "^1.83.0",
-    "cdk-fargate-run-task": "^0.0.68"
+    "@aws-cdk/aws-ec2": "^1.101.0",
+    "@aws-cdk/aws-ecs": "^1.101.0",
+    "@aws-cdk/aws-ecs-patterns": "^1.101.0",
+    "@aws-cdk/aws-efs": "^1.101.0",
+    "@aws-cdk/aws-events-targets": "^1.101.0",
+    "@aws-cdk/aws-iam": "^1.101.0",
+    "@aws-cdk/aws-lambda": "^1.101.0",
+    "@aws-cdk/aws-logs": "^1.101.0",
+    "@aws-cdk/aws-s3": "^1.101.0",
+    "@aws-cdk/aws-secretsmanager": "^1.101.0",
+    "@aws-cdk/core": "^1.101.0",
+    "@aws-cdk/custom-resources": "^1.101.0",
+    "cdk-fargate-run-task": "^0.1.30"
   },
   "bundledDependencies": [],
   "keywords": [
